--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="facebook-domain-verification" content="n7embscdsngbi3puwmm7e8xj82rfe1" />
-<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -14,13 +13,9 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '31570808639231746');
+fbq('init', '111111111111111'); // <-- Pixel de prueba
 fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 
   <title>Conexión Total</title>
   <script src="https://cdn.tailwindcss.com"></script>
