--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   <!-- SCRIPT: CTA dinámico -->
   <script>
     (function () {
-      const WA_NUMBER = '5491158488189';
+      const WA_NUMBER = '+5493812169394';
       const phrases = [
         "Hablá con nosotros en WhatsApp 📲",
         "Entrar ya 🚀",
