--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QF271E9TVW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QF271E9TVW');
+</script>
   <meta name="facebook-domain-verification" content="n7embscdsngbi3puwmm7e8xj82rfe1" />
 <!-- Meta Pixel Code -->
 <script>
