--- a/index.html
+++ b/index.html
@@ -116,86 +116,77 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   </footer>
 
   <!-- SCRIPT: CTA dinámico -->
-  <script>
-    (function () {
-      const WA_NUMBER = '541169616237';
-      const phrases = [
-        "Hablá con nosotros en WhatsApp 📲",
-        "Entrar ya 🚀",
-        "Unirme ahora 🔑",
-        "Quiero ser parte 👀",
-        "Mostrame la propuesta 🔥",
-        "Acceso directo ⚡",
-        "Obtener mi pase 🎟️",
-        "Dejame entrar 🙌",
-        "Acceso especial 🚀",
-        "Sí, quiero sumarme 😉",
-        "Listo, hablame al WhatsApp 📲",
-        "Acceso rápido ⚡"
-      ];
+<script>
+(function () {
+  const WA_NUMBER = '541169616237';
+  const phrases = [
+    "Hablá con nosotros en WhatsApp 📲",
+    "Entrar ya 🚀",
+    "Unirme ahora 🔑",
+    "Quiero ser parte 👀",
+    "Mostrame la propuesta 🔥",
+    "Acceso directo ⚡",
+    "Obtener mi pase 🎟️",
+    "Dejame entrar 🙌",
+    "Acceso especial 🚀",
+    "Sí, quiero sumarme 😉",
+    "Listo, hablame al WhatsApp 📲",
+    "Acceso rápido ⚡"
+  ];
 
-      const ctaTextEl = document.getElementById('ctaText');
-      const ctaBtnEl = document.getElementById('ctaBtn');
-      const ctaTextBottomEl = document.getElementById('ctaTextBottom');
-      const ctaBtnBottomEl = document.getElementById('ctaBtnBottom');
-      let currentIndex = Math.floor(Math.random() * phrases.length);
+  const ctaTextEl = document.getElementById('ctaText');
+  const ctaBtnEl = document.getElementById('ctaBtn');
+  const ctaTextBottomEl = document.getElementById('ctaTextBottom');
+  const ctaBtnBottomEl = document.getElementById('ctaBtnBottom');
+  let currentIndex = Math.floor(Math.random() * phrases.length);
 
-      function buildWhatsAppHref(phrase) {
-        const base = 'https://wa.me/' + WA_NUMBER;
-        const message = `¡Hola! Quiero sumarme a la conexión. (${phrase})`;
-        return base + '?text=' + encodeURIComponent(message);
-      }
+  function buildWhatsAppHref(phrase) {
+    const base = 'https://wa.me/' + WA_NUMBER;
+    const message = `¡Hola! Quiero sumarme a la conexión. (${phrase})`;
+    return base + '?text=' + encodeURIComponent(message);
+  }
 
-      function updateCTAs(index) {
-        const phrase = phrases[index];
-        fadeText(ctaTextEl, phrase);
-        fadeText(ctaTextBottomEl, phrase);
+  function updateCTAs(index) {
+    const phrase = phrases[index];
+    fadeText(ctaTextEl, phrase);
+    fadeText(ctaTextBottomEl, phrase);
 
-        const waHref = buildWhatsAppHref(phrase);
-        ctaBtnEl.setAttribute('data-href', waHref);
-        ctaBtnBottomEl.setAttribute('data-href', waHref);
+    const waHref = buildWhatsAppHref(phrase);
+    ctaBtnEl.setAttribute('href', waHref);
+    ctaBtnBottomEl.setAttribute('href', waHref);
 
-        ctaBtnEl.setAttribute('aria-label', phrase + ' — Ir a WhatsApp');
-        ctaBtnBottomEl.setAttribute('aria-label', phrase + ' — Ir a WhatsApp');
-      }
+    ctaBtnEl.setAttribute('aria-label', phrase + ' — Ir a WhatsApp');
+    ctaBtnBottomEl.setAttribute('aria-label', phrase + ' — Ir a WhatsApp');
+  }
 
-      function fadeText(el, newText) {
-        if (!el) return;
-        el.classList.add('fade-out');
-        setTimeout(() => {
-          el.textContent = newText;
-          el.classList.remove('fade-out');
-          el.classList.add('fade-in');
-          setTimeout(() => el.classList.remove('fade-in'), 300);
-        }, 200);
-      }
+  function fadeText(el, newText) {
+    if (!el) return;
+    el.classList.add('fade-out');
+    setTimeout(() => {
+      el.textContent = newText;
+      el.classList.remove('fade-out');
+      el.classList.add('fade-in');
+      setTimeout(() => el.classList.remove('fade-in'), 300);
+    }, 200);
+  }
 
-      // Handler seguro: dispara fbq y abre WhatsApp en nueva pestaña
- function attachSafeClick(buttonEl) {
-  if (!buttonEl) return;
-  buttonEl.addEventListener('click', function(e){
-    e.preventDefault();
-    const href = this.getAttribute('data-href');
-    if (href && href !== '#') {
-      // Esperamos un momento a que se abra WhatsApp antes de enviar el evento
-      setTimeout(() => {
-        try { fbq('track', 'Lead'); } catch(err){ console.warn('fbq error', err); }
-        try { gtag('event', 'lead_whatsapp_Colon'); } catch(err){ console.warn('gtag error', err); }
-      }, 800);
-      window.location.href = href;
-    }
-  }, {passive: false});
-}
+  function attachClickTracking(buttonEl) {
+    if (!buttonEl) return;
+    buttonEl.addEventListener('click', function(){
+      try { fbq('track', 'Lead'); } catch(err){ console.warn('fbq error', err); }
+      try { gtag('event', 'lead_whatsapp_ganaste'); } catch(err){ console.warn('gtag error', err); }
+    });
+  }
 
-      updateCTAs(currentIndex);
-      setInterval(() => {
-        currentIndex = (currentIndex + 1) % phrases.length;
-        updateCTAs(currentIndex);
-      }, 4000);
+  updateCTAs(currentIndex);
+  setInterval(() => {
+    currentIndex = (currentIndex + 1) % phrases.length;
+    updateCTAs(currentIndex);
+  }, 4000);
 
-      attachSafeClick(ctaBtnEl);
-      attachSafeClick(ctaBtnBottomEl);
-    })();
-  </script>
+  attachClickTracking(ctaBtnEl);
+  attachClickTracking(ctaBtnBottomEl);
+})();
+</script>
 </body>
 </html>
