--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
 
   function buildWhatsAppHref(phrase) {
     const base = 'https://wa.me/' + WA_NUMBER;
-    const message = `¡Hola! Quiero sumarme a la conexión. (${phrase})`;
+    const message = `¡Hola! Quisiera mas informacion acerca de esto. (${phrase})`;
     return base + '?text=' + encodeURIComponent(message);
   }
 
