--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   <header class="min-h-screen flex items-center justify-center">
     <div class="max-w-4xl text-center px-6">
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">
-        Viví la <span class="text-cyan-400">conexión total</span> online ⚡
+        Jugá con <span class="text-cyan-400">HOY GANAS</span>
       </h1>
       <p class="text-lg md:text-xl text-gray-400 mb-8">
-        Un espacio único donde la adrenalina y la comunidad se encuentran.
+        Plataforma confiable con +2000 juegos, atención 24hs y bono de bienvenida.
       </p>
 
       <!-- CTA principal -->
@@ -81,19 +81,19 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   <!-- BENEFICIOS -->
   <main class="py-16 bg-gray-900/70">
     <section class="max-w-5xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Lo que vas a encontrar</h2>
+      <h2 class="text-3xl font-bold mb-8">¿Por qué elegir HOY GANAS?</h2>
       <div class="grid md:grid-cols-3 gap-6">
         <div class="p-6 bg-gray-800 rounded-2xl shadow">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">Diversión sin pausa</h3>
-          <p class="text-gray-300">Experiencias dinámicas y emocionantes que te mantienen enganchado.</p>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">+2000 juegos online 🎮</h3>
+          <p class="text-gray-300">Accedé a una plataforma confiable con variedad para todos los gustos.</p>
         </div>
         <div class="p-6 bg-gray-800 rounded-2xl shadow">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">Comunidad vibrante</h3>
-          <p class="text-gray-300">Un espacio pensado para quienes disfrutan compartir y crecer.</p>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">Bono de bienvenida 🎁</h3>
+          <p class="text-gray-300">Recibí +1000 en tu primer deposito. ¡Empezá ganando!</p>
         </div>
         <div class="p-6 bg-gray-800 rounded-2xl shadow">
-          <h3 class="text-xl font-semibold mb-2 text-cyan-300">Adrenalina asegurada</h3>
-          <p class="text-gray-300">Cada experiencia está diseñada para que vivas emociones intensas.</p>
+          <h3 class="text-xl font-semibold mb-2 text-cyan-300">Atención 24hs 🕐</h3>
+          <p class="text-gray-300">Soporte personalizado para que juegues tranquilo, cuando quieras.</p>
         </div>
       </div>
     </section>
@@ -102,8 +102,8 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   <!-- FORMULARIO -->
   <section id="registro" class="py-16 px-6">
     <div class="max-w-md mx-auto bg-gray-900/70 p-6 rounded-2xl text-center">
-      <h3 class="text-2xl font-bold mb-4">¿Charlamos ahora?</h3>
-      <p class="text-sm text-gray-400 mb-6">Mandanos un mensaje y te respondemos enseguida.</p>
+      <h3 class="text-2xl font-bold mb-4">¿Querés empezar ahora?</h3>
+      <p class="text-sm text-gray-400 mb-6">Recibí atención personalizada las 24hs y accedé a +2000 juegos online con tu usuario gratis.</p>
       <a id="ctaBtnBottom" class="inline-block bg-gradient-to-r from-cyan-400 to-green-400 text-gray-900 px-6 py-3 rounded-xl font-bold shadow-lg" href="#" rel="noopener noreferrer">
         <span id="ctaTextBottom">Cargando...</span>
       </a>
@@ -119,20 +119,20 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
 <script>
 (function () {
   const WA_NUMBER = '541158487145';
-  const phrases = [
-    "Hablá con nosotros en WhatsApp 📲",
-    "Entrar ya 🚀",
-    "Unirme ahora 🔑",
-    "Quiero ser parte 👀",
-    "Mostrame la propuesta 🔥",
-    "Acceso directo ⚡",
-    "Obtener mi pase 🎟️",
-    "Dejame entrar 🙌",
-    "Acceso especial 🚀",
-    "Sí, quiero sumarme 😉",
-    "Listo, hablame al WhatsApp 📲",
-    "Acceso rápido ⚡"
-  ];
+const phrases = [
+  "Quiero crear mi usuario gratis 🍀",
+  "Mostrame los juegos disponibles 🎮",
+  "Estoy listo para empezar con 500 💸",
+  "Quiero aprovechar el bono de bienvenida 🎁",
+  "Contame cómo funciona la plataforma 🔍",
+  "Quiero saber cómo cargar y retirar 💰",
+  "Estoy buscando juegos confiables 👀",
+  "Quiero jugar y ganar hoy mismo 🕹️",
+  "Mostrame cómo registrarme en segundos ⚡",
+  "Quiero atención personalizada ahora 🕐",
+  "Estoy interesado en la promo de 1000 🎉",
+  "Quiero entrar a H0Y G4NAS 🚀"
+];
 
   const ctaTextEl = document.getElementById('ctaText');
   const ctaBtnEl = document.getElementById('ctaBtn');
