--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
   <!-- HERO -->
   <header class="min-h-screen flex items-center justify-center">
     <div class="max-w-4xl text-center px-6">
+       <img src="https://hoyganas.com/copiedImages/logo.svg" alt="Logo HOY GANAS" class="mx-auto mb-6 w-32 h-auto" />
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">
         Jugá con <span class="text-cyan-400">HOY GANAS</span>
       </h1>
