--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
     <div class="max-w-4xl text-center px-6">
        <img src="https://hoyganas.com/copiedImages/logo.svg" alt="Logo HOY GANAS" class="mx-auto mb-6 w-80 h-auto" />
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">
-        Viví la <span class="text-cyan-400">conexión total</span> online ⚡
+        Viví la <span class="text-cyan-400">conexión total</span> online
       </h1>
       <p class="text-lg md:text-xl text-gray-400 mb-8">
         Plataforma confiable con +2000 juegos, atención 24hs y bono de bienvenida.
