Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ src="https://www.facebook.com/tr?id=31570808639231746&ev=PageView&noscript=1"
 
   <!-- FOOTER -->
   <footer class="py-6 text-center text-sm text-gray-600">
-    © 2025 Conexión Total · Todos los derechos reservados
+    © 2025 Hoy Ganas · Todos los derechos reservados
   </footer>
 
   <!-- SCRIPT: CTA dinámico -->
